--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,40 @@ body {
 
 .cityname {
 }
+
+.search-bar {
+}
+
+.search-bar-input {
+  background-color: transparent;
+  color: white;
+  border: 60px;
+  border-radius: 6px;
+  width: 90%;
+  padding: 20px;
+  font-size: medium;
+  border: 2px solid rgb(207, 47, 207);
+}
+
+.search-bar-button {
+  border: none;
+  border-radius: 20px;
+  color: black;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 30px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+
+  background-color: transparent;
+  color: rgb(207, 47, 207);
+  border: 2px solid rgb(207, 47, 207);
+}
+
+.search-bar-button:hover {
+  background-color: rgb(207, 47, 207);
+  color: white;
+}
