--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,10 @@ body {
   background-color: rgb(207, 47, 207);
   color: white;
 }
+
+footer {
+  border-top: 1px solid purple;
+  padding: 30px 0 0 0;
+  text-align: center;
+  color: white;
+}
