--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,9 @@ body {
 }
 
 .search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .search-bar-input {
@@ -55,9 +58,6 @@ main {
   padding: 40px 0;
 }
 
-.city-container {
-}
-
 .city-container-name {
   color: yellow;
 }
@@ -75,22 +75,20 @@ main {
 }
 
 .degree-container {
-  display: flex;
 }
-
 .degree-icon {
-  margin-right: 10px;
 }
 
 .degree-nr {
-  font-size: 200px;
-  margin-left: 20px;
+  font-size: 50px;
+  margin-left: 10px;
   font-weight: bolder;
-  color: pink;
+  color: rgb(241, 236, 237);
 }
 
 .degree {
-  font-size: 200px;
+  font-size: 10px;
+  margin-left: 5px;
 }
 
 footer {
