--- a/src/index.css
+++ b/src/index.css
@@ -75,8 +75,12 @@ main {
 }
 
 .degree-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .degree-icon {
+  margin-bottom: 10px;
 }
 
 .degree-nr {
@@ -84,11 +88,13 @@ main {
   margin-left: 10px;
   font-weight: bolder;
   color: rgb(241, 236, 237);
+  display: inline-block;
 }
 
 .degree {
   font-size: 40px;
   margin-left: 5px;
+  display: inline-block;
 }
 
 footer {
