--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,10 @@ main {
 }
 .degree-icon {
   margin-bottom: 10px;
+  margin-right: 10px;
+  font-size: 40px;
+  top: -8px;
+  position: relative;
 }
 
 .degree-nr {
