--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 .search-bar-button {
   border: none;
   border-radius: 20px;
-  color: black;
+  color: rgb(19, 14, 14);
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
@@ -76,7 +76,7 @@ main {
 
 .degree-container {
   display: flex;
-  flex-direction: column;
+
   align-items: center;
 }
 .degree-icon {
@@ -87,9 +87,14 @@ main {
   position: relative;
 }
 
+.temperature {
+  display: inline-flex;
+  align-items: baseline;
+}
+
 .degree-nr {
   font-size: 45px;
-  margin-left: 10px;
+  margin-left: 0.2 rem;
   font-weight: bolder;
   color: rgb(241, 236, 237);
   flex-direction: row;
