--- a/src/index.css
+++ b/src/index.css
@@ -76,14 +76,14 @@ main {
 
 .degree-container {
   display: flex;
-
+  flex-direction: column;
   align-items: center;
 }
 .degree-icon {
   margin-bottom: 10px;
 
   font-size: 60px;
-  top: -8px;
+  top: 2px;
   position: relative;
 }
 
@@ -103,12 +103,11 @@ main {
 }
 
 .degree {
-  font-size: 30px;
+  font-size: 39px;
   margin-left: 5px;
-
+  font-weight: 1 10;
   color: rgb(241, 236, 237);
-  top: -38px;
-  left: -38px;
+
   flex-direction: row;
 }
 
