--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 .search-bar-button {
   border: none;
   border-radius: 20px;
-  color: rgb(19, 14, 14);
+  color: rgb(235, 229, 229);
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
@@ -59,7 +59,7 @@ main {
 }
 
 .city-container-name {
-  color: yellow;
+  color: rgb(78, 19, 73);
 }
 
 .weather-info {
@@ -90,25 +90,28 @@ main {
 .temperature {
   display: inline-flex;
   align-items: baseline;
+  position: relative;
 }
 
 .degree-nr {
   font-size: 45px;
   margin-left: 0.2 rem;
   font-weight: bolder;
-  color: rgb(241, 236, 237);
+  color: rgb(78, 19, 73);
   flex-direction: row;
 
   display: inline-block;
 }
 
 .degree {
-  font-size: 39px;
+  font-size: 20px;
+  position: absolute;
+  top: -8px;
+  right: -28px;
   margin-left: 5px;
+  margin-top: 10px;
   font-weight: 1 10;
-  color: rgb(241, 236, 237);
-
-  flex-direction: row;
+  color: rgb(78, 19, 73);
 }
 
 footer {
