--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,18 @@ body {
   padding: 25px;
   font-size: medium;
   border: 2px solid rgb(207, 47, 207);
+  outline: none;
+}
+
+.search-bar-input:focus {
+  border: 2px solid rgb(207, 47, 207);
+  outline: 2px solid rgb(207, 47, 207);
+}
+
+.search-bar-input::placeholder {
+  color: white;
+  font-style: italic;
+  opacity: 0.8;
 }
 
 .search-bar-button {
