--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,14 @@ body {
   padding: 20px;
 }
 
+/*search-bar*/
 .search-bar {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+/*search-bar-input*/
 .search-bar-input {
   background-color: transparent;
   color: white;
@@ -31,6 +33,7 @@ body {
   outline: none;
 }
 
+/*search-bar-input  boarder line around the search bar*/
 .search-bar-input:focus {
   border: 2px solid rgb(207, 47, 207);
   outline: 2px solid rgb(207, 47, 207);
@@ -42,6 +45,7 @@ body {
   opacity: 0.8;
 }
 
+/*search-bar-button*/
 .search-bar-button {
   border: none;
   border-radius: 20px;
@@ -91,6 +95,7 @@ main {
   flex-direction: column;
   align-items: center;
 }
+
 .degree-icon {
   margin-bottom: 10px;
 
